bk_ida/gccida/c2/apply_result_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1432:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1433:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1434:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1435:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1436:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1440:10: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
result = apply_result_size_size; 
         ^~~~~~~~~~~~~~~~~~~~~~
         apply_result_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1441:6: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
if ( apply_result_size_size < 0 ) 
     ^~~~~~~~~~~~~~~~~~~~~~
     apply_result_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1443:1: error: use of undeclared identifier 'apply_result_size_size'
apply_result_size_size = 0; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1509:6: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
v8 = apply_result_size_size; 
     ^~~~~~~~~~~~~~~~~~~~~~
     apply_result_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1510:6: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
if ( apply_result_size_size % v7 ) 
     ^~~~~~~~~~~~~~~~~~~~~~
     apply_result_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1510:29: error: invalid operands to binary expression ('int (void)' and 'int')
if ( apply_result_size_size % v7 ) 
     ~~~~~~~~~~~~~~~~~~~~~~ ^ ~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1512:11: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
v8 = v7 + apply_result_size_size - 1 - ( v7 + apply_result_size_size - 1) % v7; 
          ^~~~~~~~~~~~~~~~~~~~~~
          apply_result_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1512:47: error: use of undeclared identifier 'apply_result_size_size'; did you mean 'apply_result_size'?
v8 = v7 + apply_result_size_size - 1 - ( v7 + apply_result_size_size - 1) % v7; 
                                              ^~~~~~~~~~~~~~~~~~~~~~
                                              apply_result_size
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1428:6: note: 'apply_result_size' declared here
int  apply_result_size( ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1512:75: error: invalid operands to binary expression ('int (*)(void)' and 'int')
v8 = v7 + apply_result_size_size - 1 - ( v7 + apply_result_size_size - 1) % v7; 
                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1513:1: error: use of undeclared identifier 'apply_result_size_size'
apply_result_size_size = v8; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1515:1: error: use of undeclared identifier 'apply_result_size_size'
apply_result_size_size = v8 + mode_size[v2]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/builtins.c:1519:1: error: use of undeclared identifier 'apply_result_size_size'
apply_result_size_size = 116; 
^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/apply_result_size/src/obj/builtins.o] Error 1
